# ppt-mcp-no-powerpoint

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
evals/: README.md  questions.xml
evals/fixtures/: eval_deck.pptx
examples/: demo.pptx
scripts/: compute_eval_answers.py  fetch_icon_set.py  make_demo_deck.py  make_eval_fixtures.py  smoke_stdio.py
skills/ppt-deck-authoring/: SKILL.md
src/ppt_mcp/: __init__.py  compliance.py  errors.py  format.py  icons.py  manifest.py  models.py  reader.py  recommend.py  render.py  retarget.py  server.py  sessions.py  store.py  styles.py  templates.py  writer.py
src/ppt_mcp/assets/icons/material/: LICENSE  index.json
tests/: conftest.py  test_compliance.py  test_evals.py  test_icons.py  test_reader.py  test_render.py  test_retarget.py  test_server.py  test_sessions.py  test_styles.py  test_templates.py  test_writer.py
