[project]
name = "ppt-mcp"
version = "0.1.0"
description = "Local PowerPoint Intelligence MCP for template-faithful corporate decks. No PowerPoint, no COM, no network."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "mcp>=1.2.0",
    "python-pptx>=1.0.2",
    "pydantic>=2.7",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
ppt-mcp = "ppt_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppt_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
